--- a/Inicio.html
+++ b/Inicio.html
@@ -29,17 +29,17 @@
             </div>
             <div class="sidebar-menu">
                 <ul>
-                    <li>
-                        <a class="active" href="/">Inicio</a>
+                    <li id="active">
+                            <i class="fa-solid fa-house"></i><a href="/Inicio.html"> Inicio</a>
                     </li>
                     <li>
-                        <a href="./pages/sobre.html">Sobre</a>
+                       <i class="fa-solid fa-circle-info"> </i> <a href="./pages/sobre.html"> Sobre</a>
                     </li>
                     <li>
-                        <a href="./pages/trabalhos.html">Trabalhos</a>
+                        <i class="fa-solid fa-briefcase"></i><a href="./pages/trabalhos.html"> Trabalhos</a>
                     </li>
                     <li>
-                        <a href="./pages/contato.html">Contato</a>
+                        <i class="fa-solid fa-square-phone"></i><a  href="./pages/contato.html"> Contato</a>
                     </li>
                 </ul>
             </div>
@@ -48,6 +48,9 @@
                     <a href="#">Fazer Orçamento</a>
                 </button>
             </div>
+        </div>
+        <div class="mobile-btn">
+            <button class="fa-solid fa-bars"></button>
         </div>
         asdasa
     </body>
