--- a/Inicio.html
+++ b/Inicio.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JC - Soluções</title>
+        <title>JC-Soluções</title>
         
         <!--Links icon css - fonts - js - fa-->
         <!-- Style inicio -->
@@ -25,6 +25,7 @@
     <body>
         <div class="sidebar">
             <div class="sidebar-logo">
+                <img src="./assets/imgs/jclogo.png" alt="">
                 <h1>JC-Soluções</h1>
             </div>
             <div class="sidebar-menu">
@@ -52,6 +53,22 @@
         <div class="mobile-btn">
             <button class="fa-solid fa-bars"></button>
         </div>
-        asdasa
+        <section>
+            <div class="loc">
+                <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <span> Campos dos Goytacazes, Rio de Janeiro, Brasil </span>
+                    <i class="fa-solid fa-location-dot"></i>
+                </div>
+                <button>
+                    <i class="fa-solid fa-map-location-dot"></i> <a href="#">Nos veja no maps </a> <i class="fa-solid fa-arrow-pointer"></i> 
+                </button>
+            </div>
+            <div class="apresentacao">
+                <p>
+                    Bem vindos a JC - Soluções aqui te garantimos a solução do seu problema consertamos PC's, Notebook's, Fazemos seu Upgrade, Formatamos sua maquina com backup ou sem pelo mesmo preço, criamos seu site do zero no seu estilo, Gerimos suas redes sociais com design's unicos e especiais e muito mais!
+                </p>
+            </div>
+        </section>
     </body>
 </html>
