--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>JC-Soluções</title>
+        
+        <!--Links icon css - fonts - js - fa-->
+        <!-- Style inicio -->
+        <link rel="stylesheet" href="../styles/css/sobre.css">
+        <!-- Icone --> 
+        <link rel="shortcut icon" href="./assets/icons/" type="image/x-icon">
+        <!-- Fa Loading -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- Font: 'Nunito' -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+        <!-- Js Loading -->
+        <script src="../scripts/index.js" defer></script>
+        <!------------------------------------->
+
+    </head>
+    <body>
+        <div class="sidebar">
+            <div class="sidebar-logo">
+                <img src="../assets/imgs/jclogo.png" alt="">
+                <h1>JC-Soluções</h1>
+            </div>
+            <div class="sidebar-menu">
+                <ul>
+                    <li>
+                        <i class="fa-solid fa-house"></i><a href="../Inicio.html"> Inicio</a>
+                    </li>
+                    <li id="active">
+                    <i class="fa-solid fa-circle-info"> </i> <a href="./sobre.html"> Sobre</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-briefcase"></i><a href="./trabalhos.html"> Trabalhos</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-square-phone"></i><a  href="./contato.html"> Contato</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="sidebar-orcamento">
+                <button>
+                    <a href="#">Fazer Orçamento</a>
+                </button>
+            </div>
+        </div>
+        <div class="mobile-btn">
+            <button class="fa-solid fa-bars"></button>
+        </div>
+    </body>
 </html>
