--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -10,7 +10,7 @@
         <!-- Style inicio -->
         <link rel="stylesheet" href="../styles/css/sobre.css">
         <!-- Icone --> 
-        <link rel="shortcut icon" href="./assets/icons/" type="image/x-icon">
+        <link rel="shortcut icon" href="../assets/icons/iconjc.png" type="image/x-icon">
         <!-- Fa Loading -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Font: 'Nunito' -->
@@ -31,7 +31,7 @@
             <div class="sidebar-menu">
                 <ul>
                     <li>
-                        <i class="fa-solid fa-house"></i><a href="../Inicio.html"> Inicio</a>
+                        <i class="fa-solid fa-house"></i><a href="../"> Inicio</a>
                     </li>
                     <li id="active">
                     <i class="fa-solid fa-circle-info"> </i> <a href="./sobre.html"> Sobre</a>
@@ -46,12 +46,32 @@
             </div>
             <div class="sidebar-orcamento">
                 <button>
-                    <a href="#">Fazer Orçamento</a>
+                    <a target="_blank" href="https://forms.office.com/r/jifUn51Aph">Fazer Orçamento</a>
                 </button>
             </div>
         </div>
         <div class="mobile-btn">
             <button class="fa-solid fa-bars"></button>
         </div>
+        <section>
+            <div class="historia">
+                <h2>NOSSA HISTORIA</h2>
+                <p>A <b>JC-Soluções </b> foi criada para ajudar todas pessoas a qual possuem dificuldade com a tecnologia, com a ideia de ajudar a todos, desde de uma pessoa, a uma empresa pequena, ou até mesmo uma grande empresa, nossa ideia e mostrar como a tecnologia é e pode ser de grande beneficio a seu consumidor final seja você pessoa fisica ou juridica, podendo assim expandir suas redes sociais ou negocio com um site da sua marca, da sua empresa mostrando ao mundo o seu produto e como consequencia trazer um grande aumento de suas vendas, publico e outros milhares de beneficios do meio digital.</p>
+            </div>
+            <div class="colaboradores">
+                <h2>COLABORADORES</h2>
+                <div class="colaboradores-josue">
+                    <div class="foto">
+                        <img src="../assets/imgs/founderpic.jpg" alt="">
+                    </div>
+                    <div class="colaboradores-historia-josue">
+                        <h2>Josué Carvalho</h2>
+                        <h3>(Fundador da JC-Soluções - TI - Desenvolvedor-Front-End)</h3>
+                        <p>Olá, me chamo Josué, hoje venho atuando na area da Tecnologia da Informação e adoro resolver problemas da área, atualmente estudando as tecnologias de desenvolvimento Web e nos dias de hoje estou tentando migrar para área de Desenvolvimento de Softwares e sites, essa pagina foi criada por mim desde o zero com a intenção de mostrar minhas habilidades como desenvolvedor Web e também poder ajudar pessoas que necessitão de ajuda com seus problemas tecnológicos realizando tarefas da area de Gestão de TI, como formatar um (Desktop/Notebook), fazer upgrades(Melhorar) os equipamentos para maior performance e funcionamento, montagem de desktops gamers e para trabalhos, instalar e configurar pontos de rede e entre outras atividades de um TI, se você estiver precisando de algum desses serviços é só fazer um contato conosco pressionando o botão abaixo, ou indo em menu e clicando no botão de orçamento.</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </body>
 </html>
