--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Style inicio -->
         <link rel="stylesheet" href="./styles/css/inicio.css">
         <!-- Icone --> 
-        <link rel="shortcut icon" href="./assets/icons/" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/icons/iconjc.png" type="image/x-icon">
         <!-- Fa Loading -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Font: 'Nunito' -->
@@ -31,7 +31,7 @@
             <div class="sidebar-menu">
                 <ul>
                     <li id="active">
-                            <i class="fa-solid fa-house"></i><a href="/Inicio.html"> Inicio</a>
+                            <i class="fa-solid fa-house"></i><a href="/"> Inicio</a>
                     </li>
                     <li>
                        <i class="fa-solid fa-circle-info"> </i> <a href="./pages/sobre.html"> Sobre</a>
@@ -46,7 +46,7 @@
             </div>
             <div class="sidebar-orcamento">
                 <button>
-                    <a href="#">Fazer Orçamento</a>
+                    <a target="_blank" href="https://forms.office.com/r/jifUn51Aph">Fazer Orçamento</a>
                 </button>
             </div>
         </div>
@@ -61,13 +61,21 @@
                     <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <button>
-                    <i class="fa-solid fa-map-location-dot"></i> <a href="#">Nos veja no maps </a> <i class="fa-solid fa-arrow-pointer"></i> 
+                    <i class="fa-solid fa-map-location-dot"></i> <a target="_blank" href="#">Nos veja no maps </a> <i class="fa-solid fa-arrow-pointer"></i> 
                 </button>
             </div>
             <div class="apresentacao">
                 <p>
                     Bem vindos a JC - Soluções aqui te garantimos a solução do seu problema consertamos PC's, Notebook's, Fazemos seu Upgrade, Formatamos sua maquina com backup ou sem pelo mesmo preço, criamos seu site do zero no seu estilo, Gerimos suas redes sociais com design's unicos e especiais e muito mais!
                 </p>
+            </div>
+            <div class="saiba-mais">
+                <h4>Se interessou sobre a empresa, clique em saiba mais!</h4>
+                <button> <i class="fa-solid fa-chevron-right"></i> <i class="fa-solid fa-chevron-right"></i> SAIBA MAIS</button>
+            </div>
+            <div class="saiba-mais">
+                <h4>Alguma Duvida? É só entrar em contato, clique em Contato!</h4>
+                <button> <i class="fa-solid fa-chevron-right"></i> <i class="fa-solid fa-chevron-right"></i> CONTATO</button>
             </div>
         </section>
     </body>
