--- a/pages/contato.html
+++ b/pages/contato.html
@@ -10,7 +10,7 @@
         <!-- Style inicio -->
         <link rel="stylesheet" href="../styles/css/contato.css">
         <!-- Icone --> 
-        <link rel="shortcut icon" href="./assets/icons/" type="image/x-icon">
+        <link rel="shortcut icon" href="../assets/icons/iconjc.png" type="image/x-icon">
         <!-- Fa Loading -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Font: 'Nunito' -->
@@ -31,7 +31,7 @@
             <div class="sidebar-menu">
                 <ul>
                     <li>
-                            <i class="fa-solid fa-house"></i><a href="../Inicio.html"> Inicio</a>
+                            <i class="fa-solid fa-house"></i><a href="../"> Inicio</a>
                     </li>
                     <li>
                        <i class="fa-solid fa-circle-info"> </i> <a href="./sobre.html"> Sobre</a>
@@ -46,12 +46,51 @@
             </div>
             <div class="sidebar-orcamento">
                 <button>
-                    <a href="#">Fazer Orçamento</a>
+                    <a target="_blank" href="https://forms.office.com/r/jifUn51Aph">Fazer Orçamento</a>
                 </button>
             </div>
         </div>
         <div class="mobile-btn">
             <button class="fa-solid fa-bars"></button>
         </div>
+        <section>
+            <div class="contato">
+                <h3>Nossos Meios de contato</h3>
+                <div class="contato-email">
+                    <p>Envie um email: </p> 
+                    <Button> 
+                        <i class="fa-solid fa-chevron-right"></i>
+                        <i class="fa-solid fa-chevron-right"></i>
+                        <a href="mailto:jcsolucoes12@hotmail.com?subject=Faca um orcamento!">Enviar E-mail</a>
+                        <i class="fa-solid fa-chevron-left"></i>
+                        <i class="fa-solid fa-chevron-left"></i>
+                    </Button>
+                </div>
+                <div class="contato-whatsapp">
+                    <p>Envie uma mensagem em nosso Whatsapp, e tire suas duvidas.</p>
+                    <button>
+                        <i class="fa-solid fa-chevron-right"></i>
+                        <i class="fa-solid fa-chevron-right"></i>
+                        <a target="_blank" href="https://api.whatsapp.com/send?phone=5522997979633&amp;text=Tire%20suas%20duvidas,%20ou%20fa%C3%A7a%20um%20or%C3%A7amento%20mais%20rapido%20aqui%20no%20whattsapp%20da%20JC-Solu%C3%A7%C3%B5es!">
+                        Envie uma mensagem
+                        </a>
+                        <i class="fa-solid fa-chevron-left"></i>
+                        <i class="fa-solid fa-chevron-left"></i>
+                    </button>
+                </div>
+                <div class="contato-orcamento">
+                    <p>Para fazer um orçamento clique no botão fazer orçamento do menu ou o botão abaixo!</p>
+                    <button>
+                        <i class="fa-solid fa-chevron-right"></i>
+                        <i class="fa-solid fa-chevron-right"></i>
+                        <a target="_blank" href="https://forms.office.com/r/jifUn51Aph">
+                        Fazer Orcamento
+                        </a>
+                        <i class="fa-solid fa-chevron-left"></i>
+                        <i class="fa-solid fa-chevron-left"></i>
+                    </button>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
