--- a/pages/trabalhos.html
+++ b/pages/trabalhos.html
@@ -10,7 +10,7 @@
         <!-- Style inicio -->
         <link rel="stylesheet" href="../styles/css/trabalhos.css">
         <!-- Icone --> 
-        <link rel="shortcut icon" href="./assets/icons/" type="image/x-icon">
+        <link rel="shortcut icon" href="../assets/icons/iconjc.png" type="image/x-icon">
         <!-- Fa Loading -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Font: 'Nunito' -->
@@ -31,7 +31,7 @@
             <div class="sidebar-menu">
                 <ul>
                     <li>
-                        <i class="fa-solid fa-house"></i><a href="../Inicio.html"> Inicio</a>
+                        <i class="fa-solid fa-house"></i><a href="../"> Inicio</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-circle-info"> </i> <a href="./sobre.html"> Sobre</a>
@@ -46,7 +46,7 @@
             </div>
             <div class="sidebar-orcamento">
                 <button>
-                    <a href="#">Fazer Orçamento</a>
+                    <a target="_blank" href="https://forms.office.com/r/jifUn51Aph">Fazer Orçamento</a>
                 </button>
             </div>
         </div>
