--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <button>
-                    <i class="fa-solid fa-map-location-dot"></i> <a target="_blank" href="#">Nos veja no maps </a> <i class="fa-solid fa-arrow-pointer"></i> 
+                    <i class="fa-solid fa-map-location-dot"></i> <a target="_blank" href="https://goo.gl/maps/wWSHcx7UZ32jyzeN6">Nos veja no maps </a> <i class="fa-solid fa-arrow-pointer"></i> 
                 </button>
             </div>
             <div class="apresentacao">
@@ -71,11 +71,19 @@
             </div>
             <div class="saiba-mais">
                 <h4>Se interessou sobre a empresa, clique em saiba mais!</h4>
-                <button> <i class="fa-solid fa-chevron-right"></i> <i class="fa-solid fa-chevron-right"></i> SAIBA MAIS</button>
+                <a href="./pages/sobre.html" id="sobre"> <i class="fa-solid fa-chevron-right"></i> <i class="fa-solid fa-chevron-right"></i> SAIBA MAIS</a>
             </div>
             <div class="saiba-mais">
                 <h4>Alguma Duvida? É só entrar em contato, clique em Contato!</h4>
-                <button> <i class="fa-solid fa-chevron-right"></i> <i class="fa-solid fa-chevron-right"></i> CONTATO</button>
+                <a href="./pages/contato.html" id="contato"> <i class="fa-solid fa-chevron-right"></i> <i class="fa-solid fa-chevron-right"></i> CONTATO</a>
+            </div>
+            <div class="redes-sociais">
+                <h3>Redes-Sociais</h3>
+                <div>
+                    <a class="fa-brands fa-instagram" href="https://www.instagram.com/jcsolucoes12/" target="_blank"></a>
+                    <a class="fa-brands fa-facebook" href="www.facebook.com/groups/jcsolucoes/" target="_blank"></a>
+                    <a class="fa-brands fa-github" href="https://github.com/Josuerx12" target="_blank"></a>
+                </div>
             </div>
         </section>
     </body>
