--- a/pages/trabalhos.html
+++ b/pages/trabalhos.html
@@ -53,5 +53,38 @@
         <div class="mobile-btn">
             <button class="fa-solid fa-bars"></button>
         </div>
+        <section>
+            <div class="trabalhos">
+                <div class="trabalhos-1">
+                    <img src="../assets/imgs/em-breve.jpg" alt="em-breve">
+                    <h3>JC-Soluções</h3>
+                    <p>
+                        Desenvolvimento de site
+                    </p>
+                    <div>
+                        <button id="visu-1">Visualizar</button>
+                        <button id="code-1">Código</button>
+                    </div>
+                </div>
+                <div class="trabalhos-2">
+                    <img src="../assets/imgs/em-breve.jpg" alt="em-breve">
+                    <h3>JC-Soluções</h3>
+                    <p>Desenvolvimento de site</p>
+                    <div>
+                        <button id="visu-2">Visualizar</button>
+                        <button id="code-2">Código</button>
+                    </div>
+                </div>
+                <div class="trabalhos-3">
+                    <img src="../assets/imgs/em-breve.jpg" alt="em-breve">
+                    <h3>JC-Soluções</h3>
+                    <p>Desenvolvimento de site</p>
+                    <div>
+                        <button id="visu-3">Visualizar</button>
+                        <button id="code-3">Código</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
