--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -31,7 +31,7 @@
             <div class="sidebar-menu">
                 <ul>
                     <li>
-                        <i class="fa-solid fa-house"></i><a href="../"> Inicio</a>
+                        <i class="fa-solid fa-house"></i><a href="../index.htmlW"> Inicio</a>
                     </li>
                     <li id="active">
                     <i class="fa-solid fa-circle-info"> </i> <a href="./sobre.html"> Sobre</a>
