--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h3>Redes-Sociais</h3>
                 <div>
                     <a class="fa-brands fa-instagram" href="https://www.instagram.com/jcsolucoes12/" target="_blank"></a>
-                    <a class="fa-brands fa-facebook" href="www.facebook.com/groups/jcsolucoes/" target="_blank"></a>
+                    <a class="fa-brands fa-facebook" href="https://www.facebook.com/groups/jcsolucoes/" target="_blank"></a>
                     <a class="fa-brands fa-github" href="https://github.com/Josuerx12" target="_blank"></a>
                 </div>
             </div>
