--- a/pages/contato.html
+++ b/pages/contato.html
@@ -57,7 +57,7 @@
             <div class="contato">
                 <h3>Nossos Meios de contato</h3>
                 <div class="contato-email">
-                    <p>Envie um email: </p> 
+                    <p>Envie um email. </p> 
                     <Button> 
                         <i class="fa-solid fa-chevron-right"></i>
                         <i class="fa-solid fa-chevron-right"></i>
